Refactored investment plans (weekly > 100, use DayOfWeek for next date)
* Defines WEEKS_THRESHOLD as the magic number separating monthly from
  weekly intervals
* Use DayOfWeek to determine the next execution (instead of the stateful
  weeklyNominalDay

Issue: #4347